syntax = "proto3";

option go_package = "vtool/idl/grpc/grpcBase";

package grpcBase;

message ErrInfo {
    int32 code = 1;
    string msg = 2;
}

